package td1.refactor.api.general;

public enum Menus{
    MEAT, FISH, CHEESE, CUSTOM;
}