package td1.refactor2.api.general.monetary;

public interface Product {
    double price();
}
